--- a/src/TopNav/topnav.css
+++ b/src/TopNav/topnav.css
@@ -23,4 +23,5 @@
       justify-content: center;
       align-items: center;
       padding: 20px;
+      font-size: 20px;
   }
